
  ChangeLog for the eggleton-tools repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').
    
    46: AstroFloyd, 19/05/2009	
      - plotmdl: started implementation of Ubind
      - plotplt: fixed bug in plotting which structure models were saved
      - functions: added indexx (real/dble), bin_data_1d and time_stamp (for phist)
		   added polint (d) for gw_evolve
    
    29: AstroFloyd, 05/03/2009
      - plotmdl: 
        - added secondary variables mu, n, P_rad, P_gas, beta=P_rad/P_gas
	      
    28: AstroFloyd, 03/03/2009
      - added q_qrit and m_2,crit (for dynamical MT) to plotplt
      
    25: AstroFloyd, 24/02/2009
      - take into account fully convective state when computing MB
      - added hardcoded parameter ncolours to plotpln.f
      
    19: AstroFloyd, 17/02/2009
      - fixed autoupdate function in plotplt now that pgopen is used
      - fixed chosing 'zoom in' after eps file was written in plotplt(n)
      
    17: AstroFloyd, 13/02/2009
      added lambda_env to plotplt(n)
	
    14: AstroFloyd, 11/02/2009
       plotplt:
        - add lambda_ce
	- open next xwin if first is in use
	    
     2: AstroFloyd, 16/01/2009
       Cleaning of files for compilation with -warn all and -check all:
       - stick things into arrays before calling pgline/pgpoly
       - remove unused variables
     
     1: AstroFloyd, 16/01/2009
     Initial import of eggleton tools
     